<resources>
    <string name="app_name">Air Conditioner Remote</string>

    <string name="power">Power</string>

    <string name="temperature">Temperature</string>

    <string name="fan_speed">Fan Speed</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>

    <string name="service_error_title">Error</string>
    <string name="service_error_message">An error occurred while communicating with the unit.</string>

    <string name="ok">OK</string>

    <string name="action_settings">Settings</string>
</resources>
