<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="#ededed">
        <TextView android:text="@string/power"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Switch android:id="@+id/on_switch"
            android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView android:text="@string/temperature"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="24dp" android:layout_marginBottom="8dp"/>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="#ededed">
        <TextView android:id="@+id/temperature_label"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <Button android:id="@+id/decrement_temperature_button" android:text="-"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:onClick="onDecrementTemperatureButtonClicked"/>
        <Button android:id="@+id/increment_temperature_button" android:text="+"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:onClick="onIncrementTemperatureButtonClicked"/>
    </LinearLayout>

    <TextView android:text="@string/fan_speed"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_marginTop="24dp" android:layout_marginBottom="8dp"/>

    <RadioGroup android:id="@+id/fan_speed_radio_group"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:paddingTop="8dp" android:paddingBottom="8dp"
        android:paddingLeft="4dp" android:paddingRight="4dp"
        android:background="#ededed">
        <RadioButton android:text="@string/low"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:onClick="onFanSpeedButtonClicked"/>
        <RadioButton android:text="@string/medium"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:onClick="onFanSpeedButtonClicked"/>
        <RadioButton android:text="@string/high"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:onClick="onFanSpeedButtonClicked"/>
    </RadioGroup>
</LinearLayout>
